--- a/app/templates/partials/_app_header.html
+++ b/app/templates/partials/_app_header.html
@@ -4,7 +4,10 @@
         <!-- Logo -->
         <div class="flex-shrink-0">
             <a href="{{ url_for('home_page') }}">
+                <span style="font-size: 2.25rem!important; color: #fff; font-weight: 700;">YASTA</span>
+            <!--    
                 <img src="{{ url_for('static', path='img/logo_dark.png') }}" alt="YASTA Logo" class="h-7 w-auto">
+            -->
             </a>
         </div>
 
