--- a/app/templates/partials/_app_header.html
+++ b/app/templates/partials/_app_header.html
@@ -5,9 +5,6 @@
         <div class="flex-shrink-0">
             <a href="{{ url_for('home_page') }}">
                 <span style="font-size: 2.25rem!important; color: #fff; font-weight: 700;">YASTA</span>
-            <!--    
-                <img src="{{ url_for('static', path='img/logo_dark.png') }}" alt="YASTA Logo" class="h-7 w-auto">
-            -->
             </a>
         </div>
 
@@ -15,18 +12,24 @@
         <div class="flex-shrink-0">
             {% if current_user %}
                 <div class="user-menu-container">
+                    <!-- El botón SOLO contiene los elementos para hacer clic -->
                     <button id="user-menu-button" class="user-menu-trigger">
                         <img src="{{ current_user.profile_image_url or url_for('static', path='img/default_avatar.png') }}" alt="Avatar de {{ current_user.contact_name }}" class="user-avatar">
                         <span class="hidden md:inline-block ml-2">{{ current_user.contact_name or current_user.email.split('@')[0] }}</span>
                         <svg class="hidden md:inline-block dropdown-arrow" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                     </button>
+
+                    <!-- El menú desplegable va AFUERA del botón, como un hermano -->
                     <div id="user-dropdown" class="dropdown-menu hidden">
                         {% if current_user.role.value.startswith("client_") %}
-                            <a href="{{ url_for('client_dashboard_page') }}" class="dropdown-link">Mi Dashboard</a>
+                            <a href="{{ url_for('client_dashboard_page') }}" class="dropdown-link" hx-boost="false">Mi Dashboard</a>
+                        
+                        {# --- ESTA ES LA LÍNEA CORREGIDA --- #}
                         {% elif current_user.role.value.startswith("staff_") or current_user.role.value == "admin" %}
-                            <a href="{{ url_for('staff_dashboard_page') }}" class="dropdown-link">Dashboard Interno</a>
+                            <a href="{{ url_for('supervisor_dashboard_page') }}" class="dropdown-link" hx-boost="false">Dashboard Interno</a>
+                        
                         {% endif %}
-                        <a href="{{ url_for('logout') }}" class="dropdown-link">Cerrar Sesión</a>
+                        <a href="{{ url_for('logout') }}" class="dropdown-link" hx-boost="false">Cerrar Sesión</a>
                     </div>
                 </div>
             {% endif %}
