--- a/app/templates/layouts/_console_base.html
+++ b/app/templates/layouts/_console_base.html
@@ -3,6 +3,8 @@
 
 {% block page_css %}
     <link rel="stylesheet" href="{{ url_for('static', path='css/dashboard_declarations.css') }}">
+
+    <link rel="stylesheet" href="{{ url_for('static', path='css/dashboard_supervisor.css') }}">
 <style>
     /* --- ESTRUCTURA Y MENÚS --- */
     .console-container { display: flex; flex-direction: column; min-height: calc(100vh - 10rem); }
