--- a/app/templates/partials/_app_header.html
+++ b/app/templates/partials/_app_header.html
@@ -1,6 +1,6 @@
 <!-- templates/partials/_app_header.html -->
-<header id="app-header" class="bg-gray-900 border-b border-gray-700/50 sticky top-0 z-80">
-    <div class="container mx-auto px-4 flex items-center justify-between h-16">
+<header id="app-header" class="bg-gray-900 border-b border-gray-700/50">
+    <div class="container mx-auto px-4 h-16 flex items-center justify-between">
         <!-- Logo -->
         <div class="flex-shrink-0">
             <a href="{{ url_for('home_page') }}">
