--- a/app/templates/capture/partials/_demo_links.html
+++ b/app/templates/capture/partials/_demo_links.html
@@ -1,8 +1,10 @@
 <div class="demo-reports-section">
     <h2>Mientras esperas, explora lo que YASTA puede hacer por ti:</h2>
     <div class="demo-links">
-        <a href="{{ url_for('demo_comercial') }}" target="_blank" class="demo-link">Demo para Bodegas</a>
+        <a href="{{ url_for('demo_comercial') }}" target="_blank" class="demo-link">Toca 👉 Demo para R.E.R.</a>
+        <!--
         <a href="{{ url_for('demo_servicios') }}" target="_blank" class="demo-link">Demo para Servicios</a>
         <a href="{{ url_for('demo_productivo') }}" target="_blank" class="demo-link">Demo para Productores</a>
+        -->
     </div>
 </div>
